# adventofcode

./: .gitignore  aoc.py  astar.py  example_ascii_final.txt  first.py  input.txt  pyproject.toml  run.py  run_custom_comp.py  second.py
02/: 02.py
04/: run.py
05/: run.py
06/: run.py
07/: aoc.py  run.py
08/: run.py
10/: run.py
12/: run.py
13/: run.py
15/: run.py
16/: first.py
17/: first.py  profile_it.py  second.py
18/: first.py
2021/01/: run.py
2021/02/: run.py
2021/03/: run.py
2021/04/: run.py
2021/05/: run.py
2021/06/: run.py
2021/07/: star1.py  star2.py
2021/08/: puzzle.md  star1.py  star2.py
2021/09/: puzzle.md  star1.py  star2.py
2021/10/: puzzle.md  star1.py  star2.py
2021/11/: puzzle.md  star1.py
2021/12/: puzzle.md  star1.py  star2.py
2021/13/: puzzle.md  star1.py  star2.py
2021/14/: puzzle.md  star1.py  star2.py
2021/15/: puzzle.md  star1.py  star2.py
2021/17/: puzzle.md  star1.py  star2.py
2021/18/: star1.py
2022/01/: 01.py
2022/03/: run.py
2022/05/: run.py
2022/07/: run.py
2022/09/: run.py
2022/11/: run.py
2022/12/: astar.py  run.py
2022/13/: run.py
2022/14/: run.py
2022/17/: analyze_profile.py  restats  second.py
2022/20/: correct.py  first.py
2022/21/: run.py
2022/22/: star2.py
2023/01/: run.py
2023/02/: run.py
2023/03/: run.py
2023/04/: run.py
2023/05/: run.py
2023/06/: run.py  star2.py
2023/07/: run.py
2023/08/: run.py
2023/09/: run.py
2023/10/: run.py
2023/11/: run.py
2023/12/: run.py  (+1 more)
21/: run.py
22/: run.py  star2.py
23/: example.txt  run.py
(+66 files in other folders)
