[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "pyqt6>=6.10.1",
    "pyvis>=0.3.2",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
]
